--- a/styles.css
+++ b/styles.css
@@ -26,15 +26,28 @@ body {
   padding: 10px 16px;
   border-radius: 8px;
   font-weight: bold;
+  cursor: pointer;
+  box-shadow: 1.5px 2px 0px #B0F0D7;
 }
 
 .profile-btn {
+  background-color: #FE604B;
   width: 40px;
   height: 40px;
-  border-radius: 50%;
-  background: url("profile-icon.png") no-repeat center;
-  background-size: cover;
+  padding: 2px;
   border: none;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  box-shadow: 1.5px 2px 0px #FFCEC7;
+}
+
+.profile-btn img {
+  width: 90%;
+  height: 90%;
+  border-radius: 50%;
 }
 
 .sidebar {
