--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body {
   padding: 0;
   box-sizing: border-box;
 }
+
 .reproductor-audio {
   margin: 0;
   font-family: "Comic Sans MS", sans-serif;
@@ -44,6 +45,18 @@ body {
   box-shadow: 1.5px 2px 0px #FFCEC7;
 }
 
+.button-a {
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.profile-btn a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .profile-btn img {
   width: 90%;
   height: 90%;
@@ -69,11 +82,35 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  cursor: pointer;
+  box-shadow: 1.5px 2px 0px #B0F0D7;
 }
 
-.icon-button  img {
+.icon-button a {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.icon-button a img {
   width: 100%;
   border-radius: 50%;
+}
+
+.icon-inicio {
+  background-color: #3498db;
+  box-shadow: 1.5px 2px 0px #b0c7f0;
+}
+
+.icon-inicio a img {
+  width: 175%;
+}
+
+.icon-media {
+  background-color: #FE604B;
+  box-shadow: 1.5px 2px 0px #B04C3E;
 }
 
 .main-content {
@@ -137,20 +174,39 @@ body {
   height: 100%;
 }
 
-.action-buttons {
+.actions {
   display: flex;
-  justify-content: space-around;
-  margin-top: 15px;
+  justify-content: center;
+  gap: 50px;
 }
 
-.action-buttons button {
-  background: #e74c3c;
+.action-btn .action {
+  width: 30px;
+}
+
+.action-btn {
+  background-color: #FE604B;
+  margin-top: 50px;
   color: white;
   border: none;
-  padding: 10px 16px;
   border-radius: 10px;
-  font-weight: bold;
+  width: 75px;
+  height: 55px;
+  font-size: 14px;
+  font-weight: 600;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 1.5px 3px 0px #FFCEC7;
+  cursor: pointer;
 }
+
+.action-btn:hover {
+  background-color: #d94a3f;
+  box-shadow: 0px 0px 0px #FFCEC7;
+}
+
 
 .reproductor-video {
   margin: 0;
